Redesigned the linking of the entities by creating nested endpoints, added getAll methods for all the entities, rewrited the post methods so they wouldn't need the ID field of the entities and checking whether entities already exist in the DB before adding them twice.