@@ -4,8 +4,8 @@ import com.codefactorygroup.betting.converter.ParticipantDtoToParticipantConvert
 import com.codefactorygroup.betting.domain.Participant;
 import com.codefactorygroup.betting.dto.ParticipantDTO;
 import com.codefactorygroup.betting.dto.RandomParticipantsDTO;
-import com.codefactorygroup.betting.exception.NoSuchEntityExistsException;
 import com.codefactorygroup.betting.exception.EntityAlreadyExistsException;
+import com.codefactorygroup.betting.exception.NoSuchEntityExistsException;
 import com.codefactorygroup.betting.repository.ParticipantRepository;
 import com.codefactorygroup.betting.service.ParticipantService;
 import lombok.RequiredArgsConstructor;
@@ -15,6 +15,8 @@ import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service(value = "participantService")
 @RequiredArgsConstructor
@@ -22,7 +24,7 @@ public class ParticipantServiceImpl implements ParticipantService {
     private final ParticipantDtoToParticipantConverter participantDtoToParticipantConverter;
     private final ParticipantRepository participantRepository;
 
-    @Transactional
+    @Override
     public ParticipantDTO getParticipant(final Integer participantId) {
         return participantRepository.findById(participantId)
                 .map(ParticipantDTO::converter)
@@ -30,21 +32,56 @@ public class ParticipantServiceImpl implements ParticipantService {
 
     }
 
-    @Transactional
+    @Override
     public List<ParticipantDTO> getAllParticipants() {
-        return participantRepository.findAll().stream().map(ParticipantDTO::converter).toList();
+        return participantRepository.findAll()
+                .stream()
+                .map(ParticipantDTO::converter)
+                .collect(Collectors.toList());
     }
 
+    @Override
+    public List<ParticipantDTO> getParticipantsByEventId(Integer eventId) {
+        return participantRepository.findParticipantsByEventId(eventId)
+                .stream()
+                .map(ParticipantDTO::converter)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public RandomParticipantsDTO getRandomParticipants() {
+        List <ParticipantDTO> participantDTOS = participantRepository.findRandomParticipantsDTO(2)
+                .stream()
+                .map(ParticipantDTO::converter).toList();
+        if (participantDTOS.size() != 2) {
+            throw new RuntimeException("Not enough participants.");
+        }
+        return new RandomParticipantsDTO(participantDTOS.get(0), participantDTOS.get(1));
+    }
+
+    @Override
+    public List<ParticipantDTO> findPaginated(int pageNo, int pageSize) {
+        PageRequest paging = PageRequest.of(--pageNo, pageSize);
+        Page<Participant> allParticipants = participantRepository.findAll(paging);
+
+        return allParticipants.toList()
+                .stream()
+                .map(ParticipantDTO::converter)
+                .toList();
+    }
+
+    @Override
     @Transactional
     public ParticipantDTO addParticipant(final ParticipantDTO newParticipant) {
-        boolean foundParticipant = participantRepository.existsById(newParticipant.id());
-        if (foundParticipant) {
-            throw new EntityAlreadyExistsException(String.format("Participant with ID=%d already exists.", newParticipant.id()));
+        Optional<Participant> optionalParticipant = participantRepository.findByName(newParticipant.name());
+        if (optionalParticipant.isPresent()) {
+            throw new EntityAlreadyExistsException(String.format("Participant with name=%s already exists.", newParticipant.name()));
         }
         return ParticipantDTO.converter(participantRepository.
                 save(participantDtoToParticipantConverter.convert(newParticipant)));
     }
 
+    @Override
     @Transactional
     public void deleteParticipant(final Integer participantId) {
         participantRepository.deleteById(participantId);
@@ -56,6 +93,7 @@ public class ParticipantServiceImpl implements ParticipantService {
         return participant;
     }
 
+    @Override
     @Transactional
     public ParticipantDTO updateParticipant(final ParticipantDTO toUpdateParticipant,
                                             final Integer participantId) {
@@ -65,28 +103,6 @@ public class ParticipantServiceImpl implements ParticipantService {
                 .map(participantRepository::save)
                 .map(ParticipantDTO::converter)
                 .orElseThrow(() -> new NoSuchEntityExistsException(String.format("No participant with ID=%d was found.", participantId)));
-    }
-
-    @Transactional
-    public RandomParticipantsDTO getRandomParticipants() {
-        List <ParticipantDTO> participantDTOS = participantRepository.findRandomParticipantsDTO(2)
-                .stream()
-                .map(ParticipantDTO::converter).toList();
-        if (participantDTOS.size() != 2) {
-            throw new RuntimeException("Not enough participants.");
-        }
-        return new RandomParticipantsDTO(participantDTOS.get(0), participantDTOS.get(1));
-    }
-
-    @Transactional
-    public List<ParticipantDTO> findPaginated(int pageNo, int pageSize) {
-        PageRequest paging = PageRequest.of(--pageNo, pageSize);
-        Page<Participant> allParticipants = participantRepository.findAll(paging);
-
-        return allParticipants.toList()
-                .stream()
-                .map(ParticipantDTO::converter)
-                .toList();
     }
 
 }
